# fuse_monorepo

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DESIGN.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  start-guide.md  temp.md
apps/api/: .env.example  Dockerfile  alembic.ini  create_db.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 30a4bba315f3_add_user_id_to_workflow.py  31e103ee3b6d_merge_phase5_cron_drift_workspace_.py  5f26da795d90_add_workflow_position.py  5fad5564b104_add_user_id_to_credential.py  6b87038a60b9_add_folders.py  735cac88aff1_add_tables.py  978dbbccfb6b_add_execution_and_execution_log_tables.py  a1b2c3d4e5f6_add_skill_table.py  a48b71261404_add_kb_chunk_config.py  b2c3d4e5f6a7_add_workflow_env.py  c3d4e5f6a7b8_add_execution_pause_resume.py  d4611bbdbd59_add_user_table.py  d4f7b2e91a3c_workspace_escalation_config.py  f6435ffc980d_add_color_to_workflow.py
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/core/: celery.py  config.py  http.py  (+7 more)
apps/api/tests/: conftest.py  test_agent_budget.py  test_agent_node.py  test_api_auth.py  test_code_container.py  test_escalation_config.py  test_gchat_helpers.py  test_meta_webhook_routing.py  test_observability.py  test_security.py  test_tool_rate_limit.py  test_tool_registry_overrides.py  test_workflow_service.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/app/: worker.py  worker_runtime.py
(+577 files in other folders)
