[project]
name = "fuse-worker"
version = "0.1.0"
description = "Fuse Platform Worker"
dependencies = [
    "celery",
    "redis",
    "playwright",
    "httpx",
    "beautifulsoup4",
    "python-json-logger",
    "cryptography",
    "pydantic",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["../.."]

[tool.pyright]
extraPaths = ["../.."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apps"]
